--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ background-color:aquamarine;
 /* showcasting */
 .showcasting-work{
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     margin-top: 50px;
     
 }
@@ -272,10 +272,12 @@ background-color:aquamarine;
 display: block;
 color:white;
 margin: 0px;
-font-size: 18px;
+font-size: 12px;
+margin-top: 30px;
 }
 .accounts h1{
     margin-left: 200px;
+    font-size: 18px;
 }
 a li ul{
     list-style-type: none;
@@ -284,18 +286,20 @@ a li ul{
 }
 .sitemap h1{
     margin-left: 200px;
+    font-size: 18px;
+    margin-top: 30px;
 }
 .sitemap{
     margin-top: 30px;
     margin-left: 100px;
     color: white;
-    font-size: 18px;
+    font-size: 10px;
 
 }
 .head-office{
     margin-top: 90px;
     color: white;
-    font-size: 18px;
+    font-size: 12px;
     margin-left: 300px;
 }
 .footer-content-copyright{
@@ -350,7 +354,7 @@ a li ul{
      .number-company{
          text-align: center;
          font-size: 23px;
-         margin:0px;
+         margin-top:50px;
      
      
      }
@@ -373,17 +377,20 @@ a li ul{
      .timeless-artistry-text{
         font-size: 12px;
         margin:30px;
+        padding: 30px;
      }
      
      .timeless-artistry-img{
-       padding:50px;
+       padding: 50px 100px;
        
      }
      .btn{
          margin: 50px;
          display: flex;
          gap: 100px;
-         height: 60px;  
+         height: 70px;
+         width: 100%;  
+         margin-left: -2px;
      
      }
      .fa-arrow-right-long{
@@ -423,7 +430,7 @@ a li ul{
      .printing-techniques{
           font-size: 15px;
           padding: 0px;
-          margin-bottom: 50px;
+          margin-bottom:50px;
      
      } 
 
@@ -508,7 +515,6 @@ a li ul{
      .logos{
          display: flex;
          justify-content: center;
-         /* flex-wrap: wrap; */
          margin-top: 60px;
          padding:0px;
        
@@ -590,12 +596,17 @@ a li ul{
          font-size: 15px;
          
      }
+     .accounts h1{
+            font-size: 15px;
+            margin-left:40px;
+     }
      .accounts{
      display: block;
      color:white;
      font-size: 12px;
      padding: 0px;
      margin: 0px;
+     line-height: 2;
         
      }
     
@@ -604,12 +615,18 @@ a li ul{
      
          
      }
+     .sitemap h1{
+         margin-left: 40px;
+         font-size: 15px;
+         margin-top: 30px;
+     }
      .sitemap{
          margin-top: 30px;
          color: white;
          font-size: 15px;
-         margin: left -100px;
+         margin-left:-5px;
          padding: 0px;
+         line-height: 2;
 
     li,a,ol{
 text-decoration: none;
@@ -632,9 +649,9 @@ margin: 0px;
      }
 }
 
-@media screen  and ( min-width:501px) and(max-width: 1000px) {
+@media screen  and ( min-width:501px) and(max-width: 1200px) {
     *{
-        overflow: hidden;
+        overflow-wrap: break-word;
     }
     .offers{
         text-align: center;
@@ -652,18 +669,16 @@ margin: 0px;
      li,a,ul{
          text-decoration: none;
          color:white;
-         padding:10px 5px;
-         margin-left: 80px;
-         font-size: 20px;
+         font-size: 15px;
         
      }
      .navbar{
      background-image: url(images/image1.jpg);
      background-repeat: no-repeat;
      background-size: cover;
-     height: 900px;
+     height: 700px;
      
-     }
+     }  
      .fa-phone-volume{
          color: white;
          font-size: 30px;
@@ -671,10 +686,11 @@ margin: 0px;
          margin-top: 15px;
      }
      .print{
-         margin-top:-900px;
+         margin-top:-1000px;
          color: white;
          margin-left: 50px;
          font-size: 36px;
+
        
      
      
@@ -695,7 +711,8 @@ margin: 0px;
      }
      /* timeless-artistry */
      .timeless-artistry{
-         display: flex;
+         grid-column: auto;
+         flex-wrap: wrap;
          gap: 120px;
          font-size: 25px;
      
@@ -812,6 +829,11 @@ margin: 0px;
          margin-top: 60px;
          padding:0px;
      }
+        .logo-services{
+            height: 30px;
+            flex-wrap: wrap;
+            display: block;
+        }
      
      /* showcasting */
      .showcasting-work{
@@ -826,6 +848,13 @@ margin: 0px;
      }
      #showcasting-work-images{  
        height: 120vh;
+
+     }
+     .showcasting-work-images{
+         display: flex;
+         gap: 20px;
+         padding: 50px;
+         flex-wrap: wrap;
      }
      
      
@@ -859,10 +888,14 @@ margin: 0px;
      
      
      }
+
+     /* footer */
      .footer-content{
          display: flex;
+         flex-wrap: wrap;
          background-color: black;
-         height: 500px;
+            height: 600px;
+            
      }
      .rasi-logo{
          width: 150px;
@@ -870,17 +903,23 @@ margin: 0px;
          margin: 100px 60px;
          border-radius: 10px;
      }
+
+
      .footer-content-text{
          color: white;
-         margin: 80px;
          font-size: 18px;
          line-height: 1.6;
+        
+
      }
      .accounts{
-     display: block;
-     color:white;
-         margin: 30px;
-         font-size: 18px;
+            display: block;
+            color:white;
+            font-size: 12px;
+            margin: 0px;
+            padding: 0px;
+            line-height: 2;
+            
      }
      a li ul{
          list-style-type: none;
@@ -895,10 +934,9 @@ margin: 0px;
      
      }
      .head-office{
-         margin-top: 90px;
          color: white;
          font-size: 18px;
-         margin-left: 300px;
+         
      }
      .footer-content-copyright{
          color: white;
